[tool.poetry]
name = "comms"
version = "0.1.0"
description = "nice and simple command line output"
authors = ["Marcel Langer <dev@marcel.science>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
click = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
